@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.762.2.4 2008/10/15 11:29:35 martin Exp $
+# $Id: CHANGES,v 1.762.2.5 2008/10/15 15:37:59 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.4 (2008/??/??)
+ - (2008/10/15) Fixed bug# 3379 - Documentation of packages got not shown in
+    admin package manager.
  - (2008/10/15) Updated Chinese translation, thanks to Never Min!
  - (2008/10/13) Fixed bug# 3373 - Postmaster match filter is losing [***] on
     second time.
